<resources>
    <string name="app_name">Maestro</string>
    <string name="title_active_login">Maestros Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">000Matrícula@delasalle.edu</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sin up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="subjects">Materias</string>
    <string name="alumnos">Alumnos</string>

    <!--
    <string name="all">TODO</string>-->
    <string name="nameM">Taller de Desarrollo Movil para Plataforma Android</string>
    <string name="date">Lunes y Martes</string>
    <string name="hora">1:00 – 3:00 pm</string>
    <string name="title_activity_main">Materias Impartidas</string>
    <string name="subtitle_activity_main">2021</string>
    <string name="title_activity_add">Nueva Materia</string>
    <string name="title_activity_edit">Editar Materia</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">Fecha</string>
    <string name="hora_form">Hora</string>
    <string name="url_form">Url imagen</string>
    <string name="description_form">Descripción</string>
    <string name="save">Guardar</string>
    <string name="description">En esta materia lo que se vera va a ser lo que vamos a ver</string>


    <string name="title_activity_add_alumnos">Nuevo Alumno</string>
    <string name="semestre_card">Semestre: </string>
    <string name="calificacion_card">Calificación: </string>
    <string name="name_form_alumnos">Nombre</string>
    <string name="semestre_form_alumnos">Semestre</string>
    <string name="califica_form_alumnos">Calificación</string>

</resources>