<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="8dp"
                android:text="@string/nameM"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="24dp"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10sp">

                <TextView
                    android:id="@+id/semestreNTextView"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/semestre_card"
                    android:textColor="@color/black_500"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/semestreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black_500"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="24dp"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/calificaNTextView"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calificacion_card"
                    android:textColor="@color/black_500"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/calificaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora"
                    android:textColor="@color/black_500"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posterImgeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="centerCrop"
            android:background="@drawable/amarillo_alumno"/>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>