<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alumnos.AddAlumnosActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleAddTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_add_alumnos"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/name_form_alumnos"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/nameTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_form"
                android:background="@drawable/ic_field1"
                android:ems="80"
                android:hint="@string/name_form_alumnos"
                android:inputType="textAutoComplete"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/semestreEditText"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@+id/semestreTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="77dp"
                android:layout_marginLeft="16dp"
                android:autofillHints="@string/semestre_form_alumnos"
                android:background="@drawable/ic_field1"
                android:ems="3"
                android:hint="@string/semestre_form_alumnos"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />
            <TextView
                android:id="@+id/semestreTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="77dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/semestre_form_alumnos"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/calificaEditText"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@+id/calificaTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="77dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/semestreEditText"
                android:layout_toRightOf="@+id/semestreEditText"
                android:background="@drawable/ic_field1"
                android:ems="10"
                android:hint="@string/califica_form_alumnos"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/calificaTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="77dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/semestreTextView"
                android:layout_toRightOf="@+id/semestreTextView"
                android:text="@string/califica_form_alumnos"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />
            <Button
                android:id="@+id/saveButton"
                android:layout_width="240dp"
                android:layout_height="56dp"
                android:layout_below="@+id/calificaEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_buttom"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>